--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     }
   </style>
   <script type="text/javascript">
-    //var popUp = setTimeout(function() {alert("Hey le site xxxvidsxxx est trop bien. Viens dessus stp please");
-    //}, 10000)
+    var popUp = setTimeout(function() {alert("Hey le site xxxvidsxxx est trop bien. Viens dessus stp please");}, 10000)
     function open_infos() {
       width = 300;
       height = 200;
