--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     }
   </style>
   <script type="text/javascript">
-    var popUp = setTimeout(function() {alert("Hey le site xxxvidsxxx est trop bien. Viens dessus stp please");}, 10000)
-    function open_infos() {
+  //  var popUp = setTimeout(function() {alert("Hey le site xxxvidsxxx est trop bien. Viens dessus stp please");}, 10000)
+
+     function open_infos() {
       width = 300;
       height = 200;
       if (window.innerWidth) {
@@ -33,7 +34,7 @@
         var left = (document.body.clientWidth - width) / 2;
         var top = (document.body.clientHeight - height) / 2;
       }
-      window.open('/home/victor/Bureau/JSBetterMotherFuckingWebsite/popUp.html', "Visite d'un super site", 'menubar=no, scrollbars=no, top=' + top + ', left=' + left + ', width=' + width + ', height=' + height + '');
+      window.open('https://nicephora.github.io/JSBetterMotherFuckingWebsite/popUp.html', "Visite d'un super site", 'menubar=no, scrollbars=no, top=' + top + ', left=' + left + ', width=' + width + ', height=' + height + '');
     }
   </script>
 
