apparition de la Pop Up au bout de 10 secondes + centrage

--- a/index.html
+++ b/index.html
@@ -22,20 +22,9 @@
     }
   </style>
   <script type="text/javascript">
-  //  var popUp = setTimeout(function() {alert("Hey le site xxxvidsxxx est trop bien. Viens dessus stp please");}, 10000)
-
-     function open_infos() {
-      width = 300;
-      height = 200;
-      if (window.innerWidth) {
-        var left = (window.innerWidth - width) / 2;
-        var top = (window.innerHeight - height) / 2;
-      } else {
-        var left = (document.body.clientWidth - width) / 2;
-        var top = (document.body.clientHeight - height) / 2;
-      }
-      window.open('https://nicephora.github.io/JSBetterMotherFuckingWebsite/popUp.html', "Visite d'un super site", 'menubar=no, scrollbars=no, top=' + top + ', left=' + left + ', width=' + width + ', height=' + height + '');
-    }
+    setTimeout(function() {
+      window.open("https://nicephora.github.io/JSBetterMotherFuckingWebsite/popUp.html", "unSuperSite", width = '50px', height = '50px');
+    }, 10000)
   </script>
 
 
