Ajout du lien de retour sur le site si l'on clique Non

--- a/popUp.html
+++ b/popUp.html
@@ -8,12 +8,11 @@
 
 <body>
   <h1>Hey le site xxxvidsxxx est trop bien. Viens dessus stp please. T'es ok pour jeter un coup d'oeil?</h1>
-  <div style="text-align:center;" class="centrer">
-    <a href="#" id="position" class="myButton2">Non</a>
+  <div style="text-align:center">
+    <a href="https://nicephora.github.io/JSBetterMotherFuckingWebsite/" id="position" class="myButton2">Non</a>
     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" id="position" class="myButton">Oui</a>
   </div>
   <style>
-    .centrer {}
 
     .myButton {
       background-color: #44c767;
@@ -31,7 +30,7 @@
 
 
     }
-    }
+
 
     .myButton:hover {
       background-color: #5cbf2a;
